feat: Plot axis - errors
Plotted axes.
As soon as axes are plotted, around 20 labels go missing.
Dont know why. Tried linear and band scales. No difference whatsoever.
Fucking Freecodecamp wants axes for some fucking reason nobody really knows.

--- a/css/index.css
+++ b/css/index.css
@@ -12,4 +12,8 @@ h2 {
   text-align: center;
   font-size: 18px;
   font-weight: 400;
+}
+
+body {
+  margin-left: 100px;
 }/*# sourceMappingURL=index.css.map */
