--- a/css/index.scss
+++ b/css/index.scss
@@ -15,3 +15,14 @@ h2 {
 body {
 	margin-left: 100px;
 }
+
+#tooltip {
+	position: absolute;
+	/* visibility: hidden; */
+	background-color: lightgoldenrodyellow;
+	opacity: 0;
+	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+	border-radius: 3px;
+	padding: 0px 10px;
+	font-size: 12px;
+}
